nav and footer layout issues fixed

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -28,6 +28,10 @@ a {
   display: flex;
   justify-content: space-between;
   align-items: center;
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 1;
 }
 
 .nav-bar-links {
@@ -42,6 +46,12 @@ a {
 .nav-bar-links a {
   padding: 5px;
   color: white;
+}
+
+.container {
+  margin-top: 50px;
+  z-index: -1;
+  flex: 1;
 }
 
 .nav-dropdown-menu {
@@ -59,16 +69,23 @@ a {
   right: 0;
   font-size: larger;
   font-weight: bolder;
+  z-index: 1;
 }
 
 /* footer on FD needs fixing */
 footer {
-  position: fixed;
-  bottom: 0;
+  /* position: fixed; */
+  /* bottom: 0; */
   width: 100%;
   height: 50px;
   background-color: lightgray;
   padding: 10px;
+}
+
+.body-website {
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
 .fd-body {
@@ -132,5 +149,3 @@ footer {
   height: 50px;
   width: 50px;
 }
-
-/*# sourceMappingURL=style.css.map */
